[gd_scene load_steps=4 format=3 uid="uid://bjom6xl0q755t"]

[ext_resource type="Script" path="res://src/UILayer.gd" id="1_7kj0j"]
[ext_resource type="PackedScene" uid="uid://dqtgj3j6gessf" path="res://src/widgets/game_form.tscn" id="2_t5guy"]
[ext_resource type="PackedScene" uid="uid://dag4os62ioe28" path="res://src/widgets/manu_form.tscn" id="3_02tet"]

[node name="UILayer" type="CanvasLayer"]
script = ExtResource("1_7kj0j")

[node name="GameForm" parent="." instance=ExtResource("2_t5guy")]
unique_name_in_owner = true
process_mode = 3

[node name="ManuForm" parent="." instance=ExtResource("3_02tet")]

[connection signal="name_input_popup_confirm" from="GameForm" to="." method="_on_game_form_name_input_popup_confirm"]
[connection signal="quit_pressed" from="GameForm" to="." method="_on_game_form_quit_pressed"]
[connection signal="retry_pressed" from="GameForm" to="." method="_on_game_form_retry_pressed"]
[connection signal="btn_new_game_pressed" from="ManuForm" to="." method="_on_manu_form_btn_new_game_pressed"]
[connection signal="btn_quit_game_pressed" from="ManuForm" to="." method="_on_manu_form_btn_quit_game_pressed"]
[connection signal="btn_rank_game_pressed" from="ManuForm" to="." method="_on_manu_form_btn_rank_game_pressed"]
[connection signal="btn_setting_game_pressed" from="ManuForm" to="." method="_on_manu_form_btn_setting_game_pressed"]
